fix related songs table clipping bottom

--- a/src/components/SongList/SongModal.scss
+++ b/src/components/SongList/SongModal.scss
@@ -203,8 +203,11 @@
 
   .related-songs {
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    
     .table-container {
-      height: 100%;
+      flex: 1;
       overflow-y: auto;
     }
   }
